# mrichardson03.panos

./: .flake8  .gitignore  .releaserc.json  Makefile  Pipfile  README.md  fix-pytest-ini.py  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CONTRIBUTING.md  dependabot.yml  do-release.sh
.github/workflows/: ci.yml  release.yml
plugins/action/: panos_address_object.py  panos_check.py  panos_commit.py  panos_dynamic_updates.py  panos_import.py  panos_license.py  panos_snippet_group.py  panos_software.py
plugins/doc_fragments/: fragments.py
plugins/httpapi/: panos.py
plugins/module_utils/: panos.py
plugins/modules/: panos_address_group.py  panos_address_object.py  panos_api_key.py  panos_application_filter.py  panos_application_group.py  panos_application_object.py  panos_check.py  panos_commit.py  panos_config_element.py  panos_custom_url_category.py  panos_dynamic_updates.py  panos_dynamic_user_group.py  panos_facts.py  panos_import.py  panos_license.py  panos_object_facts.py  panos_op.py  panos_region.py  panos_schedule_object.py  panos_service_group.py  panos_service_object.py  panos_snippet_group.py  panos_software.py  panos_tag_object.py
roles/firewall/: README.md
roles/firewall/defaults/: main.yml
roles/firewall/handlers/: main.yml
roles/firewall/meta/: main.yml
roles/firewall/tasks/: main.yml
roles/ironskillet/: README.md
roles/onboard/: README.md
roles/onboard/meta/: main.yml
tests/integration/: README.md  inventory.example  reset.yml  run_all_tests.yml  run_single_test.yml
tests/sanity/: ignore-2.10.txt
(+71 files in other folders)
