[tool.poetry]
name = "mrichardson03.panos"
version = "0.1.0"
description = ""
authors = ["Michael Richardson <mrichardson03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xmltodict = "^0.12.0"

[tool.poetry.dev-dependencies]
ansible = "^2.10.1"
pytest = "^6.1.2"
black = "^20.8b1"
isort = "^5.6.4"
coverage = "4.5.4"
flake8 = "^3.8.4"
pytest-xdist = "^2.1.0"
pytest-mock = "^3.3.1"
pylint = "^2.6.0"
voluptuous = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
